# mails-python

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/mails_agent/: __init__.py  client.py  exceptions.py  models.py
tests/: test_client.py
