[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mails-agent"
version = "1.7.1"
description = "Python SDK for mails-agent — email capabilities for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Gene Dai" }]
keywords = ["email", "ai-agent", "mails", "verification-code"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = ["httpx>=0.24.0"]

[project.urls]
Homepage = "https://mails0.com"
Repository = "https://github.com/Digidai/mails-python"
Documentation = "https://github.com/Digidai/mails-python#readme"

[project.optional-dependencies]
test = ["pytest>=7.0", "anyio[trio]>=3.0", "pytest-anyio>=0.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/mails_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
